syntax = "proto3";
package utv.v1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "google/api/annotations.proto";
import "utv/v1/genesis.proto";

option go_package = "github.com/push-protocol/push-chain/x/utv/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params queries all parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/utv/v1/params";
  }

  // ChainConfig returns the configuration for a specific chain.
  rpc ChainConfig(QueryChainConfigRequest) returns (QueryChainConfigResponse) {
    option (google.api.http).get = "/utv/v1/chain_config/{chain_id}";
  }

  // ChainConfigs returns the list of all configured chains with pagination.
  rpc ChainConfigs(QueryChainConfigsRequest) returns (QueryChainConfigsResponse) {
    option (google.api.http).get = "/utv/v1/chain_configs";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1;
}

// QueryChainConfigRequest is the request type for the Query/ChainConfig RPC method.
message QueryChainConfigRequest {
  // chain_id is the unique identifier of the chain configuration to query.
  string chain_id = 1;
}

// QueryChainConfigResponse is the response type for the Query/ChainConfig RPC method.
message QueryChainConfigResponse {
  // chain_config contains the requested chain configuration.
  ChainConfig chain_config = 1;
}

// QueryChainConfigsRequest is the request type for the Query/ChainConfigs RPC method.
message QueryChainConfigsRequest {
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryChainConfigsResponse is the response type for the Query/ChainConfigs RPC method.
message QueryChainConfigsResponse {
  // chain_configs contains the list of chain configurations.
  repeated ChainConfig chain_configs = 1;
  
  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
